# GraphicsProject

./: .gitignore  CMakeLists.txt  GraphicsProject.sln
GraphicsProject/: Camera.cpp  Camera.h  Draw.cpp  Draw.h  GMath.cpp  GMath.h  GMath.inl  GraphicsProject.cpp  GraphicsProject.vcxproj  GraphicsProject.vcxproj.filters  Lighting.cpp  Lighting.h  ObjectLoader.cpp  ObjectLoader.h  Primitives.h  Projection.cpp  Projection.h  helli.mtl  nritya.mtl  primitives.cpp  rocket.mtl  simple2.mtl  simplecube.mtl  simplecube2.mtl
GraphicsProject/inc/: Camera.h  Draw.h  GMath.h  GMath.inl  Projection.h
